--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,12 +4,12 @@
 
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-languages-core</artifactId>
-    <version>1.12.2</version>
+    <version>1.12.3-SNAPSHOT</version>
     <packaging>pom</packaging>
     <parent>
         <groupId>org.vivoweb</groupId>
         <artifactId>vivo-languages</artifactId>
-        <version>1.12.2</version>
+        <version>1.12.3-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
     <name>VIVO Languages CORE</name>
@@ -54,7 +54,7 @@
         <connection>scm:git:git@github.com:vivo-project/VIVO-languages.git</connection>
         <developerConnection>scm:git:git@github.com:vivo-project/VIVO-languages.git</developerConnection>
         <url>git@github.com:vivo-project/VIVO-languages.git</url>
-        <tag>vivo-languages-1.12.2</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
