--- a/installer/webapp/pom.xml
+++ b/installer/webapp/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-installer-vivo</artifactId>
-    <version>1.12.2-SNAPSHOT</version>
+    <version>1.12.2</version>
     <packaging>war</packaging>
     <parent>
         <groupId>org.vivoweb</groupId>
         <artifactId>vivo-installer</artifactId>
-        <version>1.12.2-SNAPSHOT</version>
+        <version>1.12.2</version>
         <relativePath>..</relativePath>
     </parent>
 
