--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-installer</artifactId>
-    <version>1.12.2</version>
+    <version>1.12.3-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>VIVO Installer</name>
 
