--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -438,3 +438,8 @@ createAndLink.providers = doi, pmid
   # VIVO does not contain restricted data that should not be shared with others.
   #
 # tpf.activeFlag = true
+
+# File upload file size in bytes. By default 10485760 bytes (10Mb)
+#fileUpload.maxFileSize = 10485760
+#comma separated list of mime types allowed for upload
+#fileUpload.allowedMIMETypes = image/png, application/pdf
