fixing the issue with non-existing VIVO_HOME/rdf directory

--- a/installer/home/pom.xml
+++ b/installer/home/pom.xml
@@ -56,9 +56,9 @@
                                 <configuration>
                                     <target>
                                         <delete includeemptydirs="true">
-                                            <fileset dir="${vivo-dir}/rdf">
-                                                <include name="**/*"/>
-                                                <exclude name="**/i18n/*_x_*/**"/>
+                                            <fileset dir="${vivo-dir}">
+                                                <include name="rdf/**/*"/>
+                                                <exclude name="rdf/**/i18n/*_x_*/**"/>
                                             </fileset>
                                         </delete>
                                     </target>
