--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -456,15 +456,15 @@ createAndLink.providers = doi, pmid
 #comma separated list of mime types allowed for upload
 #fileUpload.allowedMIMETypes = image/png, application/pdf
 
-# Captcha configuration. Available implementations are: NANOCAPTCHA (text-based) and RECAPTCHA
-# NANOCAPTCHA is available in 2 difficulties ('easy' and 'hard')
-# If captcha.implementation property is not provided, system will fall back to NANOCAPTCHA implementation
+# Captcha configuration. Available implementations are: nanocaptcha (text-based) and recaptchav2
+# nanocaptcha is available in 2 difficulties (easy and hard)
+# If captcha.implementation property is not provided, system will fall back to nanocaptcha implementation
 # with easy diffuculty (if captcha is enabled)
-# For RECAPTCHA method, you have to provide siteKey and secretKey.
+# For recaptchav2 method, you have to provide siteKey and secretKey.
 # More information on siteKey and secretKey is available on: https://www.google.com/recaptcha
-# Only RECAPTCHAv2 implementation is supported
+# Only recaptchav2 implementation is supported
 captcha.enabled = true
-captcha.implementation = NANOCAPTCHA
+captcha.implementation = nanocaptcha
 nanocaptcha.difficulty = hard
 #recaptcha.siteKey =
 #recaptcha.secretKey =
