--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -457,8 +457,8 @@ createAndLink.providers = doi, pmid
 #fileUpload.allowedMIMETypes = image/png, application/pdf
 
 # Feature toggle for forgot password functionality
-authentication.forgotPassword = enabled
-authentication.forgotPassword.notify-admin = true
+authentication.forgotPassword = false
+authentication.forgotPassword.notify-admin = false
 
 # Captcha configuration. Available implementations are: nanocaptcha (text-based) and recaptchav2
 # nanocaptcha is available in 2 difficulties (easy and hard)
