--- a/installer/home/pom.xml
+++ b/installer/home/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-installer-home</artifactId>
-    <version>1.14.1-SNAPSHOT</version>
+    <version>1.14.1</version>
     <packaging>pom</packaging>
     <parent>
         <groupId>org.vivoweb</groupId>
         <artifactId>vivo-installer</artifactId>
-        <version>1.14.1-SNAPSHOT</version>
+        <version>1.14.1</version>
         <relativePath>..</relativePath>
     </parent>
     <name>VIVO Install Home</name>
