--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-project</artifactId>
-    <version>1.14.2-SNAPSHOT</version>
+    <version>1.14.2</version>
     <packaging>pom</packaging>
 
     <name>VIVO</name>
