--- a/home/pom.xml
+++ b/home/pom.xml
@@ -4,13 +4,13 @@
 
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-home</artifactId>
-    <version>1.14.3</version>
+    <version>1.14.4-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <parent>
         <groupId>org.vivoweb</groupId>
         <artifactId>vivo-project</artifactId>
-        <version>1.14.3</version>
+        <version>1.14.4-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
