added commented context.path configuration property to example.runtime.properties

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -32,6 +32,10 @@
   #
 Vitro.defaultNamespace = http://vivo.mydomain.edu/individual/
 
+# In case VIVO is behind proxy you might want to avoid redirects by overriding
+# context path to empty string or other custom value
+# context.path=
+
   #
   # The email address of the root user for the VIVO application. The password
   # for this user is initially set to "rootPassword", but you will be asked to
