--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -411,6 +411,16 @@ visualization.temporal = enabled
   #
 visualization.mapOfScience = enabled
 
+  #Maximum number of co-authors displayed on co-authors network.
+visualization.coAuthorNetwork.maxCollaborators = 35
+
+  #Prioritize co-authors stored as Persons in lists with VCard co-authors
+  #In case you would like to prioritize person co-authors over co-authors stored as VCards
+  #when there are more than maximum number of collaborators this property can be set to 10000.
+  #In that case list of coauthors to display limited by maximum number collaborators will be 
+  #first sorted by the type of stored collaborator (Person first, then VCard) and sencond by 
+  #the number of joint publications.
+visualization.coAuthorNetwork.personBoost = 0
   #
   # Types of individual for which we can create proxy editors.
   # If this is omitted, defaults to http://www.w3.org/2002/07/owl#Thing
