--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -419,7 +419,7 @@ visualization.coAuthorNetwork.maxCollaborators = 35
   #In case you would like to prioritize person co-authors over co-authors stored as VCards
   #when there are more than maximum number of collaborators this property can be set to 10000.
   #In that case list of coauthors to display limited by maximum number collaborators will be 
-  #first sorted by the type of stored collaborator (Person first, then VCard) and sencond by 
+  #first sorted by the type of stored collaborator (Person first, then VCard) and second by 
   #the number of joint publications.
 visualization.coAuthorNetwork.personBoost = 0
   #
