--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -221,13 +221,11 @@ selfEditing.idMatchingProperty = http://vivo.mydomain.edu/ns#networkId
 # languages.forceLocale = en_US
 
   #
-  # An ordered list of supported languages or Locales that the user may choose
-  # to use instead of the one specified by the browser. The order of available
-  # locales in the VIVO UI will be in accordance with order in this property
-  # locales values. The first in the list will be selected as default locale
-  # when a user is accessing the application for the first time. The selected
-  # language(s) must exist in the list of property files in webapps or in the
-  # list of ttl files in interface-i18n directories within VIVO home. This
+  # A comma-separated ordered list of locales to be offered to the user in the
+  # language-selector dropdown at the top of the VIVO UI. The order of items here
+  # controls the order of options in the language selector. The first locale in the
+  # list will be used as a default until the user selects another. Each included
+  # locale must be supported by VIVO i18n .properties or .ttl files. This
   # affects RDF data retrieved from the model, if RDFService.languageFilter is true.
   # This also affects the text of pages that have been modified to support
   # multiple languages.
